--- a/Project/editaccount.ui
+++ b/Project/editaccount.ui
@@ -255,6 +255,9 @@
      <height>48</height>
     </rect>
    </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
+   </property>
    <property name="text">
     <string>Choose</string>
    </property>
@@ -268,6 +271,9 @@
      <height>48</height>
     </rect>
    </property>
+   <property name="cursor">
+    <cursorShape>BusyCursor</cursorShape>
+   </property>
    <property name="text">
     <string>Enter</string>
    </property>
@@ -280,6 +286,9 @@
      <width>180</width>
      <height>48</height>
     </rect>
+   </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
    </property>
    <property name="text">
     <string>Cancel</string>
@@ -306,6 +315,19 @@
      <width>181</width>
      <height>48</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <weight>50</weight>
+     <italic>false</italic>
+     <bold>false</bold>
+    </font>
+   </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
+   </property>
+   <property name="mouseTracking">
+    <bool>false</bool>
    </property>
    <property name="text">
     <string>Choose</string>
