--- a/Project/login.ui
+++ b/Project/login.ui
@@ -85,6 +85,9 @@
      <height>48</height>
     </rect>
    </property>
+   <property name="cursor">
+    <cursorShape>BusyCursor</cursorShape>
+   </property>
    <property name="text">
     <string>Enter</string>
    </property>
