--- a/Project/windowper.ui
+++ b/Project/windowper.ui
@@ -39,6 +39,9 @@
      <height>60</height>
     </rect>
    </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
+   </property>
    <property name="text">
     <string/>
    </property>
@@ -61,6 +64,9 @@
      <width>131</width>
      <height>60</height>
     </rect>
+   </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
    </property>
    <property name="text">
     <string>Exit</string>
@@ -85,6 +91,9 @@
      <height>48</height>
     </rect>
    </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
+   </property>
    <property name="text">
     <string>Delete your Account</string>
    </property>
@@ -103,10 +112,13 @@
    <property name="geometry">
     <rect>
      <x>1340</x>
-     <y>1080</y>
+     <y>1020</y>
      <width>180</width>
      <height>48</height>
     </rect>
+   </property>
+   <property name="cursor">
+    <cursorShape>BusyCursor</cursorShape>
    </property>
    <property name="text">
     <string>Search</string>
@@ -114,29 +126,6 @@
    <property name="icon">
     <iconset resource="Resours/Recours.qrc">
      <normaloff>:/icon/icons8-america-96.png</normaloff>:/icon/icons8-america-96.png</iconset>
-   </property>
-   <property name="iconSize">
-    <size>
-     <width>50</width>
-     <height>50</height>
-    </size>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="hashtagSearchBtn">
-   <property name="geometry">
-    <rect>
-     <x>1340</x>
-     <y>1020</y>
-     <width>180</width>
-     <height>48</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Search</string>
-   </property>
-   <property name="icon">
-    <iconset resource="Resours/Recours.qrc">
-     <normaloff>:/icon/icons8-hashtag-96.png</normaloff>:/icon/icons8-hashtag-96.png</iconset>
    </property>
    <property name="iconSize">
     <size>
@@ -153,6 +142,9 @@
      <width>180</width>
      <height>48</height>
     </rect>
+   </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
    </property>
    <property name="text">
     <string>Add</string>
@@ -176,6 +168,9 @@
      <width>180</width>
      <height>48</height>
     </rect>
+   </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
    </property>
    <property name="text">
     <string>Logout</string>
@@ -210,6 +205,9 @@
      <height>48</height>
     </rect>
    </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
+   </property>
    <property name="text">
     <string>Save</string>
    </property>
@@ -232,6 +230,9 @@
      <width>180</width>
      <height>48</height>
     </rect>
+   </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
    </property>
    <property name="text">
     <string>Follow</string>
