add UserAccount and change the WindowPer

--- a/Project/Resours/Recours.qrc
+++ b/Project/Resours/Recours.qrc
@@ -36,5 +36,7 @@
         <file>icons8-plus-math-96.png</file>
         <file>icons8-arrow-pointing-left-96.png</file>
         <file>icons8-save-96.png</file>
+        <file>icons8-chevron-left-96.png</file>
+        <file>icons8-user-male-104.png</file>
     </qresource>
 </RCC>
