--- a/Project/windowper.ui
+++ b/Project/windowper.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1547</width>
-    <height>1151</height>
+    <width>1172</width>
+    <height>625</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -22,8 +22,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1547</width>
-     <height>1151</height>
+     <width>1172</width>
+     <height>625</height>
     </rect>
    </property>
    <property name="text">
@@ -59,7 +59,7 @@
   <widget class="QPushButton" name="exitBtn">
    <property name="geometry">
     <rect>
-     <x>1420</x>
+     <x>1040</x>
      <y>0</y>
      <width>131</width>
      <height>60</height>
@@ -86,8 +86,8 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>1080</y>
-     <width>351</width>
+     <y>560</y>
+     <width>371</width>
      <height>48</height>
     </rect>
    </property>
@@ -111,8 +111,8 @@
   <widget class="QPushButton" name="userSearchBtn">
    <property name="geometry">
     <rect>
-     <x>1340</x>
-     <y>1020</y>
+     <x>200</x>
+     <y>500</y>
      <width>180</width>
      <height>48</height>
     </rect>
@@ -137,8 +137,8 @@
   <widget class="QPushButton" name="addBtn">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>160</y>
+     <x>20</x>
+     <y>150</y>
      <width>180</width>
      <height>48</height>
     </rect>
@@ -164,7 +164,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>1020</y>
+     <y>500</y>
      <width>180</width>
      <height>48</height>
     </rect>
@@ -189,18 +189,18 @@
   <widget class="QPlainTextEdit" name="tweetTxt">
    <property name="geometry">
     <rect>
-     <x>230</x>
-     <y>160</y>
-     <width>1291</width>
-     <height>851</height>
+     <x>210</x>
+     <y>150</y>
+     <width>931</width>
+     <height>171</height>
     </rect>
    </property>
   </widget>
   <widget class="QPushButton" name="saveBtn">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>220</y>
+     <x>20</x>
+     <y>210</y>
      <width>180</width>
      <height>48</height>
     </rect>
@@ -222,11 +222,11 @@
     </size>
    </property>
   </widget>
-  <widget class="QPushButton" name="followBtn">
+  <widget class="QPushButton" name="cancelBtn">
    <property name="geometry">
     <rect>
-     <x>1340</x>
-     <y>100</y>
+     <x>20</x>
+     <y>270</y>
      <width>180</width>
      <height>48</height>
     </rect>
@@ -235,7 +235,120 @@
     <cursorShape>PointingHandCursor</cursorShape>
    </property>
    <property name="text">
-    <string>Follow</string>
+    <string>Cancel</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton">
+   <property name="geometry">
+    <rect>
+     <x>960</x>
+     <y>340</y>
+     <width>180</width>
+     <height>48</height>
+    </rect>
+   </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
+   </property>
+   <property name="text">
+    <string>Next</string>
+   </property>
+   <property name="icon">
+    <iconset resource="Resours/Recours.qrc">
+     <normaloff>:/icon/icons8-chevron-right-48.png</normaloff>:/icon/icons8-chevron-right-48.png</iconset>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>40</width>
+     <height>40</height>
+    </size>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_2">
+   <property name="geometry">
+    <rect>
+     <x>210</x>
+     <y>340</y>
+     <width>180</width>
+     <height>48</height>
+    </rect>
+   </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
+   </property>
+   <property name="text">
+    <string>Previous</string>
+   </property>
+   <property name="icon">
+    <iconset resource="Resours/Recours.qrc">
+     <normaloff>:/icon/icons8-chevron-left-96.png</normaloff>:/icon/icons8-chevron-left-96.png</iconset>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>40</width>
+     <height>40</height>
+    </size>
+   </property>
+  </widget>
+  <widget class="QLabel" name="likeTxt">
+   <property name="geometry">
+    <rect>
+     <x>416</x>
+     <y>340</y>
+     <width>211</width>
+     <height>34</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Dyuthi</family>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>Likes:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="mentionTxt">
+   <property name="geometry">
+    <rect>
+     <x>680</x>
+     <y>340</y>
+     <width>251</width>
+     <height>34</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Dyuthi</family>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>Mentions:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="followersTxt">
+   <property name="geometry">
+    <rect>
+     <x>210</x>
+     <y>100</y>
+     <width>261</width>
+     <height>34</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Dyuthi</family>
+     <pointsize>15</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>Followers:</string>
    </property>
   </widget>
  </widget>
