--- a/Project/signup.ui
+++ b/Project/signup.ui
@@ -118,7 +118,7 @@
     </item>
    </layout>
   </widget>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QPushButton" name="enterBtn">
    <property name="geometry">
     <rect>
      <x>710</x>
@@ -180,7 +180,7 @@
     </size>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>11</x>
