--- a/Project/useraccount.ui
+++ b/Project/useraccount.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1172</width>
-    <height>625</height>
+    <height>533</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>200</y>
+     <y>140</y>
      <width>1131</width>
      <height>171</height>
     </rect>
@@ -27,16 +27,17 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>150</y>
+     <y>90</y>
      <width>261</width>
      <height>34</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <family>Dyuthi</family>
-     <pointsize>15</pointsize>
+     <family>FreeSerif</family>
+     <pointsize>16</pointsize>
      <weight>75</weight>
+     <italic>true</italic>
      <bold>true</bold>
     </font>
    </property>
@@ -80,7 +81,7 @@
    <property name="geometry">
     <rect>
      <x>780</x>
-     <y>380</y>
+     <y>320</y>
      <width>180</width>
      <height>48</height>
     </rect>
@@ -105,16 +106,18 @@
   <widget class="QLabel" name="likeTxt">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>380</y>
-     <width>131</width>
+     <x>480</x>
+     <y>320</y>
+     <width>151</width>
      <height>61</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <family>Dyuthi</family>
+     <family>FreeSerif</family>
+     <pointsize>13</pointsize>
      <weight>75</weight>
+     <italic>true</italic>
      <bold>true</bold>
     </font>
    </property>
@@ -128,7 +131,7 @@
      <x>0</x>
      <y>0</y>
      <width>1172</width>
-     <height>625</height>
+     <height>533</height>
     </rect>
    </property>
    <property name="text">
@@ -139,7 +142,7 @@
    <property name="geometry">
     <rect>
      <x>970</x>
-     <y>380</y>
+     <y>320</y>
      <width>180</width>
      <height>48</height>
     </rect>
@@ -190,8 +193,8 @@
   <widget class="QPushButton" name="userSearchBtn">
    <property name="geometry">
     <rect>
-     <x>980</x>
-     <y>560</y>
+     <x>970</x>
+     <y>470</y>
      <width>180</width>
      <height>48</height>
     </rect>
@@ -213,31 +216,11 @@
     </size>
    </property>
   </widget>
-  <widget class="QLabel" name="mentionTxt">
-   <property name="geometry">
-    <rect>
-     <x>260</x>
-     <y>380</y>
-     <width>181</width>
-     <height>61</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Dyuthi</family>
-     <weight>75</weight>
-     <bold>true</bold>
-    </font>
-   </property>
-   <property name="text">
-    <string>Mentions:</string>
-   </property>
-  </widget>
   <widget class="QPushButton" name="likeBtn">
    <property name="geometry">
     <rect>
-     <x>160</x>
-     <y>380</y>
+     <x>640</x>
+     <y>320</y>
      <width>60</width>
      <height>60</height>
     </rect>
@@ -259,8 +242,8 @@
   <widget class="QPushButton" name="mentionBtn">
    <property name="geometry">
     <rect>
-     <x>440</x>
-     <y>380</y>
+     <x>710</x>
+     <y>320</y>
      <width>60</width>
      <height>60</height>
     </rect>
@@ -283,7 +266,7 @@
    <property name="geometry">
     <rect>
      <x>290</x>
-     <y>140</y>
+     <y>80</y>
      <width>180</width>
      <height>48</height>
     </rect>
@@ -301,6 +284,62 @@
     </size>
    </property>
   </widget>
+  <widget class="QPushButton" name="quteTweetBtn">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>320</y>
+     <width>221</width>
+     <height>48</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Qute tweet</string>
+   </property>
+   <property name="icon">
+    <iconset resource="Resours/Recours.qrc">
+     <normaloff>:/icon/icons8-bird-64.png</normaloff>:/icon/icons8-bird-64.png</iconset>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>50</width>
+     <height>50</height>
+    </size>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="retweetBtn">
+   <property name="geometry">
+    <rect>
+     <x>260</x>
+     <y>320</y>
+     <width>180</width>
+     <height>48</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Retweet</string>
+   </property>
+   <property name="icon">
+    <iconset resource="Resours/Recours.qrc">
+     <normaloff>:/icon/icons8-link-96.png</normaloff>:/icon/icons8-link-96.png</iconset>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>40</width>
+     <height>40</height>
+    </size>
+   </property>
+  </widget>
+  <widget class="QPlainTextEdit" name="quteTweetTxt">
+   <property name="geometry">
+    <rect>
+     <x>27</x>
+     <y>380</y>
+     <width>411</width>
+     <height>138</height>
+    </rect>
+   </property>
+  </widget>
   <zorder>BG</zorder>
   <zorder>tweetTxt</zorder>
   <zorder>followersTxt</zorder>
@@ -310,10 +349,12 @@
   <zorder>nextBtn</zorder>
   <zorder>exitBtn</zorder>
   <zorder>userSearchBtn</zorder>
-  <zorder>mentionTxt</zorder>
   <zorder>likeBtn</zorder>
   <zorder>mentionBtn</zorder>
   <zorder>followBtn</zorder>
+  <zorder>quteTweetBtn</zorder>
+  <zorder>retweetBtn</zorder>
+  <zorder>quteTweetTxt</zorder>
  </widget>
  <resources>
   <include location="Resours/Recours.qrc"/>
