add Mention window

--- a/Project/Resours/Recours.qrc
+++ b/Project/Resours/Recours.qrc
@@ -38,5 +38,6 @@
         <file>icons8-user-male-104.png</file>
         <file>icons8-eye-96.png</file>
         <file>icons8-invisible-96.png</file>
+        <file>icons8-evidence-96.png</file>
     </qresource>
 </RCC>
