fix scale of all windows

--- a/Project/useraccount.ui
+++ b/Project/useraccount.ui
@@ -10,6 +10,18 @@
     <height>533</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>1172</width>
+    <height>533</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>1172</width>
+    <height>533</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
