--- a/Project/editaccount.ui
+++ b/Project/editaccount.ui
@@ -10,6 +10,18 @@
     <height>618</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>1494</width>
+    <height>618</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>1494</width>
+    <height>618</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
