--- a/Project/login.ui
+++ b/Project/login.ui
@@ -13,11 +13,29 @@
     <height>423</height>
    </rect>
   </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>722</width>
+    <height>423</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>722</width>
+    <height>423</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="Resours/Recours.qrc">
+   <iconset>
     <normaloff>:/img/LogoB</normaloff>:/img/LogoB</iconset>
   </property>
   <property name="styleSheet">
@@ -55,7 +73,7 @@
   <widget class="QPushButton" name="seePassBtn">
    <property name="geometry">
     <rect>
-     <x>520</x>
+     <x>550</x>
      <y>190</y>
      <width>31</width>
      <height>31</height>
@@ -75,35 +93,12 @@
     </size>
    </property>
   </widget>
-  <widget class="QPushButton" name="unseePassBtn">
-   <property name="geometry">
-    <rect>
-     <x>560</x>
-     <y>190</y>
-     <width>31</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="icon">
-    <iconset resource="Resours/Recours.qrc">
-     <normaloff>:/icon/icons8-invisible-96.png</normaloff>:/icon/icons8-invisible-96.png</iconset>
-   </property>
-   <property name="iconSize">
-    <size>
-     <width>31</width>
-     <height>31</height>
-    </size>
-   </property>
-  </widget>
   <widget class="QLineEdit" name="passwordTxtBar">
    <property name="geometry">
     <rect>
      <x>235</x>
      <y>185</y>
-     <width>281</width>
+     <width>311</width>
      <height>42</height>
     </rect>
    </property>
@@ -132,7 +127,7 @@
     <rect>
      <x>235</x>
      <y>104</y>
-     <width>357</width>
+     <width>381</width>
      <height>42</height>
     </rect>
    </property>
@@ -150,12 +145,34 @@
     <string>&lt;font color = white&gt;Password</string>
    </property>
   </widget>
+  <widget class="QPushButton" name="unseePassBtn">
+   <property name="geometry">
+    <rect>
+     <x>590</x>
+     <y>190</y>
+     <width>31</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="icon">
+    <iconset resource="Resours/Recours.qrc">
+     <normaloff>:/icon/icons8-invisible-96.png</normaloff>:/icon/icons8-invisible-96.png</iconset>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>31</width>
+     <height>31</height>
+    </size>
+   </property>
+  </widget>
  </widget>
  <tabstops>
   <tabstop>usernameTxtBar</tabstop>
   <tabstop>passwordTxtBar</tabstop>
   <tabstop>enterBtn</tabstop>
-  <tabstop>unseePassBtn</tabstop>
   <tabstop>seePassBtn</tabstop>
  </tabstops>
  <resources>
