--- a/Project/mention.ui
+++ b/Project/mention.ui
@@ -10,6 +10,18 @@
     <height>341</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>920</width>
+    <height>341</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>920</width>
+    <height>341</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
