--- a/Project/signup.ui
+++ b/Project/signup.ui
@@ -10,11 +10,29 @@
     <height>790</height>
    </rect>
   </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>906</width>
+    <height>790</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>906</width>
+    <height>790</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="Resours/Recours.qrc">
+   <iconset>
     <normaloff>:/img/LogoB</normaloff>:/img/LogoB</iconset>
   </property>
   <widget class="QLabel" name="BG">
