--- a/Project/editaccount.ui
+++ b/Project/editaccount.ui
@@ -235,16 +235,6 @@
     <string/>
    </property>
   </widget>
-  <widget class="QLineEdit" name="HeaderColor">
-   <property name="geometry">
-    <rect>
-     <x>2</x>
-     <y>-9</y>
-     <width>831</width>
-     <height>51</height>
-    </rect>
-   </property>
-  </widget>
   <widget class="QLabel" name="hTxt">
    <property name="geometry">
     <rect>
@@ -366,6 +356,19 @@
      <width>641</width>
      <height>381</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="HeaderColor">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>851</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
    </property>
   </widget>
  </widget>
